# src/swagger_documentation.json
@@ -27,10 +27,7 @@
   "paths": {
     "/usuarios": {
       "post": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Endpoint para criar um usuário.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -64,16 +61,10 @@
         }
       },
       "get": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Endpoint para buscar todos os usuários.",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -83,25 +74,18 @@
     },
     "/usuarios/{id}": {
       "get": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Endpoint para buscar um usuário pelo ID.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -112,17 +96,13 @@
         }
       },
       "patch": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Endpoint para atualizar um usuário pelo ID.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
+            "type": "string"
           },
           {
             "name": "body",
@@ -156,17 +136,13 @@
         }
       },
       "delete": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Endpoint para deletar um usuário pelo ID.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
+            "type": "string"
           },
           {
             "name": "body",
@@ -205,21 +181,41 @@
     "Users": {
       "type": "object",
       "properties": {
-        "id": {
+        "type": {
           "type": "string",
-          "example": "aaaaaaaa-bbbbbbbbb-cccccccc-ddddddddd"
+          "example": "object"
         },
-        "name": {
-          "type": "string",
-          "example": "Teste"
-        },
-        "age": {
-          "type": "number",
-          "example": 21
-        },
-        "email": {
-          "type": "string",
-          "example": "teste@gmail.com"
+        "properties": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "email": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "age": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "integer"
+                }
+              }
+            }
+          }
         }
       }
     }
